--- a/site/index.html
+++ b/site/index.html
@@ -17,30 +17,27 @@
 	<div class="col-lg-4 col-md-6 col-sm-12">
 		<div class="box">
 			<p class="content-name name1">Chicken</p>
-			<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-				dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-				mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-				enim.</p>
+			<p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatem id voluptatum
+				dignissimos architecto facilis quibusdam ducimus quo perferendis ab voluptates veritatis eius non
+				laboriosam dolor debitis consectetur, odit cum.</p>
 		</div>
 	</div>
 
 	<div class="col-lg-4 col-md-6 col-sm-12">
 		<div class="box">
 			<p class="content-name name2">Beef</p>
-			<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-				dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-				mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-				enim.</p>
+			<p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel doloremque exercitationem
+				provident quod, nisi culpa ea nemo? Distinctio, in sunt natus fuga facilis aliquid impedit aut provident
+				veritatis odio qui. </p>
 		</div>
 	</div>
 
 	<div class="col-lg-4 col-md-12 col-sm-12">
 		<div class="box">
 			<p class="content-name name3">Sushi</p>
-			<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-				dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-				mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-				enim.</p>
+			<p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam quod sit nihil
+				alias distinctio accusantium dignissimos blanditiis a omnis qui, maxime enim, exercitationem minima
+				placeat est autem voluptates provident.</p>
 		</div>
 	</div>
 
