now i thing is good

--- a/site/index.html
+++ b/site/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-
-	<title>Responsive Layout</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<h1>Our Menu</h1>
-
-
-
-	<div class="col-lg-4 col-md-6 col-sm-12">
-		<div class="box">
-			<p class="content-name name1">Chicken</p>
-			<p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatem id voluptatum
-				dignissimos architecto facilis quibusdam ducimus quo perferendis ab voluptates veritatis eius non
-				laboriosam dolor debitis consectetur, odit cum.</p>
-		</div>
-	</div>
-
-	<div class="col-lg-4 col-md-6 col-sm-12">
-		<div class="box">
-			<p class="content-name name2">Beef</p>
-			<p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel doloremque exercitationem
-				provident quod, nisi culpa ea nemo? Distinctio, in sunt natus fuga facilis aliquid impedit aut provident
-				veritatis odio qui. </p>
-		</div>
-	</div>
-
-	<div class="col-lg-4 col-md-12 col-sm-12">
-		<div class="box">
-			<p class="content-name name3">Sushi</p>
-			<p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam quod sit nihil
-				alias distinctio accusantium dignissimos blanditiis a omnis qui, maxime enim, exercitationem minima
-				placeat est autem voluptates provident.</p>
-		</div>
-	</div>
-
+    <h1>Our Menu</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="S9">
+                <h2>Chicken</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, dolor expedita. Doloribus
+                    consequuntur quia vitae repellat, velit amet impedit mollitia quos id aspernatur animi sint, neque
+                    tempore reprehenderit et temporibus!
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="Note_9">
+                <h2>Beef</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ex, qui vitae suscipit, reiciendis
+                    voluptatum optio exercitationem harum officia atque at id veniam quaerat, ratione sed?
+                    Reprehenderit, quos? Rem, at?
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section class="iPhone_X">
+                <h2>Sushi</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque exercitationem perspiciatis facilis
+                    numquam, dolorum odit eos doloribus, repudiandae illo saepe ex necessitatibus voluptatum pariatur.
+                    Iusto assumenda quia suscipit tenetur doloribus!
+                </p>
+            </section>
+        </div>
+    </div>
 </body>
 
 </html>
